k8s/production/spack/spackbotdev-spack-io/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spackbotdev-spack-io
  namespace: spack
  labels:
    app: spackbotdev-spack-io
    svc: web
spec:
  selector:
    matchLabels:
      app: spackbotdev-spack-io
      svc: web
  replicas: 1
  template:
    metadata:
      labels:
        app: spackbotdev-spack-io
        svc: web
    spec:
      containers:
      - name: web
        # image: "ghcr.io/spack/spack-bot:latest"
        # Can use some other image for testing, see README.md
        image: "ghcr.io/kwryankrattiger/spackbot:0.0.1"
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 110m
            memory: 200M
        ports:
        - name: http
          containerPort: 8080
      nodeSelector:
        spack.io/node-pool: base

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spackbotdev-workers
  namespace: spack
  labels:
    app: spackbotdev-workers
    svc: workers
spec:
  selector:
    matchLabels:
      app: spackbotdev-workers
      svc: workers
  replicas: 1
  template:
    metadata:
      labels:
        app: spackbotdev-workers
        svc: workers
    spec:
      serviceAccountName: spackbotdev-spack-io
      containers:
      - name: worker
        # image: "ghcr.io/spack/spackbot-workers:latest"
        # Can use some other image for testing, see README.md
        image: "ghcr.io/kwryankrattiger/spackbot-workers:0.0.1"
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 900m
            memory: 1G
        # Mount secrets to non-existing location
        volumeMounts:
        - mountPath: "/git_rsa"
          name: spack-bot-dev-idrsa
          readOnly: true
      volumes:
      - name: spack-bot-dev-idrsa
        secret:
          secretName: spack-bot-dev-idrsa
          defaultMode: 0600
      nodeSelector:
        spack.io/node-pool: base

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spackbotdev-lworkers
  namespace: spack
  labels:
    app: spackbotdev-lworkers
    svc: workers
spec:
  selector:
    matchLabels:
      app: spackbotdev-lworkers
      svc: workers
  # replicas cannot exceed 1 until
  # rq jobs can be properly sync'd
  replicas: 1
  template:
    metadata:
      labels:
        app: spackbotdev-lworkers
        svc: workers
    spec:
      serviceAccountName: spackbotdev-spack-io
      containers:
      - name: long-task-worker
        # image: "ghcr.io/spack/spackbot-workers:latest"
        # Can use some other image for testing, see README.md
        image: "ghcr.io/kwryankrattiger/spackbot-workers:0.0.1"
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 900m
            memory: 1G
        # Mount secrets to non-existing location
        volumeMounts:
        - mountPath: "/git_rsa"
          name: spack-bot-dev-idrsa
          readOnly: true
      volumes:
      - name: spack-bot-dev-idrsa
        secret:
          secretName: spack-bot-dev-idrsa
          defaultMode: 0600
      nodeSelector:
        spack.io/node-pool: base
