k8s/production/spack/spackbotdev-spack-io/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: spackbotdev-spack-io
  namespace: spack
  labels:
    app: spackbotdev-spack-io
    svc: web
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: spackbotdev-spack-io
    svc: web
